--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ project(
     LANGUAGES C CXX
     VERSION 0.1)
 
+include(GNUInstallDirs)
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -71,3 +73,6 @@ target_link_libraries(mockoto PRIVATE ${LINK_LIBRARIES})
 
 install(TARGETS mockoto
         RUNTIME DESTINATION bin)
+
+install(FILES mockoto.1
+        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
