fix: chibi uint8_t pointer is not string
Signed-off-by: Diogo Behrens <db7@sdf.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ add_mockoto_test(static_and_extern_are_ignored)
 add_mockoto_test(multi_header_generates_all_funcs)
 add_mockoto_test(rkt_mode_generates_bindings)
 add_mockoto_test(chibi_mode_generates_stub)
+add_mockoto_test(chibi_mode_uint8_pointer_not_string)
 add_mockoto_test(unknown_mode_fails)
 add_mockoto_test(version_flags_show_version)
 add_mockoto_test(compile_and_run_generated_mock)
