--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,8 @@ add_mockoto_test(multi_header_generates_all_funcs)
 add_mockoto_test(rkt_mode_generates_bindings)
 add_mockoto_test(chibi_mode_generates_stub)
 add_mockoto_test(chibi_mode_uint8_pointer_not_string)
+add_mockoto_test(chicken_mode_generates_bindings)
+add_mockoto_test(chicken_mode_structs_and_enums)
 add_mockoto_test(unknown_mode_fails)
 add_mockoto_test(version_flags_show_version)
 add_mockoto_test(compile_and_run_generated_mock)
